client/src/App.css
/* ... */
*-webkit-scrollbar-thumb {
  background-color: rgb(14, 5, 82);
  outline: none;
}





















/*Header*/
header{
  width:100dvw;
  min-width: 100%;
  height: 60px;
  background-color: #1c344dfc;


  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;

  margin-bottom: 10px;
}

header>img{
  height: 60px;
  filter:drop-shadow(0px 0px 7px  rgb(0, 0, 0));
}
.title {
  font-size: large;
  color: whitesmoke;
   filter:drop-shadow(1px 1px 8px  rgb(0, 0, 0));
}

.logOut{
  color: whitesmoke;
  font-size: large;
  filter:drop-shadow(1px 1px 8px  rgb(0, 0, 0));
  cursor:pointer;
}


button{
  cursor: pointer;
}



.pseudo{
  visibility: hidden;
}


























/*Lists*/
.realApp{
  display: flex;
  flex-direction: column;
}
.section {
  display: flex;
  flex-direction: column;
  align-items: center;

  height: fit-content;
  max-height: 82dvh;
  width: 25dvw;
  min-width: 350px;
  padding: 10px;
  border-radius: 15px;
  border: 1px solid rgb(234,234,234);
  background-color:  rgba(234, 234, 234, 0.5) ;
  backdrop-filter: blur(3px);
    -webkit-backdrop-filter: blur(3px);
    -moz-backdrop-filter:blur(3px)
  /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
}




.list {
  overflow: auto;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
}

.listTitle{
  width:100%;
  display: flex;
  justify-content: space-around;
  color:rgb(23 43 78);  
}

.section>.listTitle{
filter:drop-shadow(1px 1px 18px  rgb(255, 255, 255));
}

.titleBtn{
  background-color: transparent;
  border: none;
  font-size: x-large;
  font-weight:500;
  color: rgb(23 43 78);
  filter:drop-shadow(1px 1px 9.5px  rgb(255, 255, 255))
}
.titleBtn:hover{
color:white;
}


/*Tasks*/
.task {
  margin: 10px 0px ;
  padding: 10px 0px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 8dvh;
  min-height: 55px;
  width: 85%;
  min-width: 340px;
  border-radius: 15px;
  background-color: rgba(239, 238, 255, 0.8) ;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.task:hover{
  background-color: rgba(206, 205, 220, 0.9) ;
}

.task>a{
  text-decoration: none;
  color:rgb(23 43 78); 
  font-weight:bold;
  font-size: medium;
}

.moveBtn{
 width:100%;
 display: flex;
 justify-content: space-around;
}
button{
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  min-width: fit-content;
  border:none;
  border-radius: 10px;

}
.moveBtn>button, .singleBtn{
  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
  padding:7.5px;  
  background-color: rgb(234, 234, 234);
  color:rgb(23 43 78);
  font-weight:bold;
}


.moveBtn>button:hover, .singleBtn:hover{
  background-color: rgb(221, 218, 218);
}

/* .singleBtn{
  padding: 3px;
  border:none;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
  background-color: rgba(255, 255, 255, 0.5);
  color:rgb(23 43 78);
  font-weight: 400;
} */
/* {
  background-color: rgb(221, 218, 218);
} */


















/*Show*/
.overlay{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1000;
}
.trashOverlay{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  /* z-index: 800; *//*Working without z-indes*/
}
.editOverlay{
 position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0);
  z-index: 3000;
}
.showOverlay{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 100;
}

.close{
  align-self: flex-end;
  border:none;
  font-size: x-large;
  background-color: rgba(255, 255, 255, 0);
  color:rgb(62, 72, 90); 
}
.close:hover{
 color:rgb(4, 24, 75); 
}

.modalContainer {
  height: 50dvh;
  min-height: fit-content;
  width: 40dvw;
  overflow-y: auto;
  overflow-x: hidden;
  /* margin: 20px 0px; */
  padding: 10px 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  border-radius: 15px;
  background-color: rgba(235, 236, 240, 0.9);
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;

  position: fixed;
  top:50%;
  left: 50%;
  transform: translate(-50%,-50%);

  /* z-index: 1000000001; */
}
.editModal{
  background-color: rgba(0, 0, 0, 0);
}

.showHeader{
  width: 100%;
  display: flex;
  flex-direction: column;
  /* align-self: flex-start; */
}
.showHeader>.listTitle{
  margin: 2.5dvh 0;
}

.taskStatus{
  text-decoration: underline;
}

.showInfo{
  height: fit-content;
  margin-top: -5dvh;
  width:100%;
  display:flex;
  justify-self:flex-end;
  align-self: center;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.showInfo>h3{
  color:rgb(23 43 78);
  align-self: flex-start;  
}

.secondaryInfo{
  font-size: larger;
  color:rgb(29, 35, 45); 
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  margin-bottom: 15px;
}

.instructions{
  padding: 2.5px 10px ;
  border-radius: 5px;
  background-color: transparent;
  min-width:99%;
  /* margin-bottom: 2.5dvh; */
  /* height: 100%; */
  min-height:50px ;
  height: fit-content;
}
.instructions>p{
    text-align: left;
  align-self: flex-start;
  font-size: large;
  line-height: 20px;
}
.emptyInstructions{
  padding: 2.5px 10px ;
  border-radius: 5px;
  background-color: whitesmoke;
  min-width:99%;
  min-height:50px ;
  margin-bottom: 2.5dvh;
}
.editable{
  cursor:pointer;
  text-align: left;
}
.editable:hover{
  background-color: whitesmoke;
}

ol{
  text-align: left;
  align-self: flex-start;
  list-style-position: inside
}
ol>li{
  font-size: large;
  line-height: 20px;
}
/* ... */

